# mind-q-agent

./: .gitignore  CONTRIBUTING.md  MIND_Q_DETAILED_ROADMAP.md  MIND_Q_PHASE_4_AUTOMATION_COMPLETE.md  MIND_Q_PHASE_4_MASTER_GUIDE.md  MIND_Q_PHASE_4_PART_2.md  MIND_Q_PHASE_4_ROADMAP.md  MIND_Q_PHASE_5_OBSERVER_SRS.md  README.md  README_PHASE0.md  STATUS_REPORT.txt  docker-compose.prod.yml  main.py  package-lock.json  project_status.txt  pyproject.toml  requirements.txt  setup.cfg  test_doc.txt  verification_report.md
config/: default.yaml
data/: automation.db  learning.db  mind_q.sqlite  mind_q_db  mind_q_db.wal  mindq_graph
data/chroma_db/: chroma.sqlite3
data/vector_store/: chroma.sqlite3
docs/: AIDER_PROMPT.md  DEPLOYMENT.md  FRONTEND_BUILD_PROMPT.md  FRONTEND_INTEGRATION_GUIDE.md  N8N_INTEGRATION_GUIDE.md
examples/: graph_usage.py  test_llamacpp.py  vector_usage.py  watcher_usage.py
frontend/: electron.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.html
mind_q_agent/: __init__.py  cli.py
mind_q_agent/api/: app.py  settings.py
mind_q_agent/automation/: converter.py  n8n_client.py  storage.py  template_loader.py
mind_q_agent/db/: sqlite.py
n8n-nodes-mindq/: package-lock.json  package.json
scripts/: generate_status_report.py  init_db.py  verify_analytics.py  verify_backup_restore.py  verify_chat_api.py  verify_concepts.py  verify_llm_core.py  verify_ollama.py  verify_openapi.py  verify_phase_4a.py  verify_phase_4a_final.py  verify_preferences.py  verify_rag_context.py  verify_websocket.py
(+117 files in other folders)
