[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-q-agent"
version = "0.1.0"
description = "Intelligent local knowledge management system"
requires-python = ">=3.10"
dependencies = [
    "kuzu>=0.0.10",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "spacy>=3.7.2",
    "watchdog>=3.0.0",
    "psutil>=5.9.6",
    "pyyaml>=6.0.1",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
